# vulkan-nrc

./: Cargo.toml
src/: area_emitter.rs  bsdf.rs  device_address.rs  diffuse_bsdf.rs  emitter.rs  instance.rs  main.rs  mesh.rs  registry.rs  sbt.rs  scene.rs  shape.rs
src/shaders/: bindings.glsl  instance.glsl  intersection.glsl
src/shaders/bsdf/: eval.glsl  sample.glsl
src/shaders/bsdf/diffuse_bsdf/: common.glsl  eval.glsl  sample.glsl
src/shaders/compute_si/: common.glsl  mesh.glsl
src/shaders/emitter/: sample.glsl
src/shaders/shape/mesh/: common.glsl  compute_si.glsl
